--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+div{
+	width:200px;
+	background:purple;
+	border-left-color:green;
+	border-left-width:5px;
+	border-left-style:solid;
+	padding:10px;
+	font-size:20px;
+	color:white
+	
+}
