--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
 div{
 	width:200px;
 	background:purple;
-	border-left-color:green;
-	border-left-width:5px;
-	border-left-style:solid;
+	border-left:green 5px solid;
+/* 	border-left-width:5px;
+	border-left-style:solid; */
+	text-decoration:underline;
 	padding:10px;
 	font-size:20px;
 	color:white
